Back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tricount-back
  namespace: tricountapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tricount-back
  template:
    metadata:
      labels:
        app: tricount-back
    spec:
      containers:
      - name: tricount-back
        image: hugo08/hugo_repo:triback-20
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
