Back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tricount-back-svc
  namespace: tricountapp
spec:
  selector:
    app: tricount-back
  ports:
  - port: 3000
    targetPort: 3000
