Back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: tricountapp
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingres.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: tricount-api.hponthieu.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tricount-back-svc
            port: 
              number: 3000
